# margos

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
argos_plugins/: CMakeLists.txt
argos_plugins/controllers/: CMakeLists.txt  my_ipc_controller.cpp  my_ipc_controller.h
argos_plugins/loop_functions/: CMakeLists.txt  zoo_loop_functions.cpp  zoo_loop_functions.h
docs/: ARGoS-Setup.md  DesignBrainstorm.md  EvalCloseoutChecklist.md  EvalPlanOverview.md  HighLevelArchitectureBrainstorm.md  LowLevelArchitectureBrainstorm.md  ResearchPlan.md  Sprint-Issues-CLI.md  Sprint-Issues-Core.md  Sprint1-Issues-CLI.md  Sprint2-Issues-Core.md  Sprint3-Issues-Analysis-Export.md  WorkflowBrainstorm.md  backlog.md  gitusage.md  index.html
docs/experiments/docker/: Dockerfile.researcher_b
docs/experiments/evidence/SRQ2/: analysis_summary.md  step_logs.csv  timing_data.csv
docs/experiments/evidence/SRQ4/: error_log.csv  (+4 more)
docs/experiments/protocols/: Protocol-SRQ1-Architecture.md  Protocol-SRQ2-Efficiency.md  Protocol-SRQ3-Reproducibility.md  Protocol-SRQ4-Usability.md  Protocol-SRQ5-Collaboration.md
experiments/: run_srq3_batch.py
experiments/configs/: aggregation_long.yaml  aggregation_smoke.yaml  aggregation_srq2.yaml  aggregation_srq3.yaml  aggregation_test.yaml  aggregation_v1.yaml  srq4_eval.yaml  srq5_eval.yaml  test_exp.yaml
experiments/scenarios/: footbot_aggregation.argos  footbot_aggregation_srq3.argos  test.argos
experiments/training/: aggregation.py  srq5.py  test.py
margos/: __init__.py  cli.py
margos/analysis/: __init__.py  compare.py  report.py
margos/argos_zoo/: __init__.py  argos_env.py  logging_utils.py  scenario_utils.py
margos/argos_zoo/scenarios/: __init__.py
margos/config/: __init__.py  loader.py  schema.py
margos/export/: __init__.py  bundle.py  importer.py
margos/logging/: __init__.py
margos/orchestrator/: __init__.py  runner.py
margos/utils/: __init__.py  display.py  errors.py  progress.py  ray_logging.py
marl_platform/: __init__.py  cli.py
marl_platform/analysis/: __init__.py  compare.py  report.py
marl_platform/argos_zoo/: __init__.py  argos_env.py  scenario_utils.py  zmq_client.py
marl_platform/argos_zoo/scenarios/: aggregation.py
marl_platform/config/: __init__.py  loader.py  schema.py
marl_platform/export/: __init__.py  bundle.py  importer.py
marl_platform/logging/: __init__.py  callbacks.py
marl_platform/orchestrator/: __init__.py  runner.py
marl_platform/utils/: __init__.py  display.py  errors.py  fingerprint.py  progress.py  seeds.py
results/aggregation_srq3_20260311-110742/: config.yaml  config_hash.txt  env_fingerprint.yaml
results/aggregation_srq3_20260311-110742/logs/: metrics.jsonl
results/aggregation_srq3_20260311-110742/tensorboard/: events.out.tfevents.1773223682.MacBookPro.fritz.box.41086.0
results/aggregation_v1_20260310-170135/: config.yaml  config_hash.txt  env_fingerprint.yaml
results/aggregation_v1_20260310-170135/logs/: metrics.jsonl
results/aggregation_v1_20260310-170135/tensorboard/: events.out.tfevents.1773158517.MacBookPro.fritz.box.4183.0
scripts/: bootstrap_researcherb.sh  fmt_md_tables.py  srq5_dry_run_researcherb.sh  verify_argos.py
tests/: __init__.py  conftest.py  test_analysis_compare.py  test_analysis_report.py  test_argos_integration.py  test_argos_zoo.py  test_cli_e2e.py  test_config.py  test_e2e_aggregation.py  test_export_bundle.py  test_export_importer.py  test_fingerprint.py  test_logging.py  test_orchestrator.py  test_run_srq3_batch.py  test_seeds.py  test_training_seed_propagation.py
(+16 files in other folders)
