[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-platform"
version = "0.1.0"
description = "Research platform for MARL experiment workflows"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0",
]
ml = [
    "torch>=2.0",
    "tensorboard>=2.0",
    "numpy>=1.24",
    "ray[rllib]>=2.0",
    "pyzmq>=25.0",
    "pettingzoo>=1.24",
    "gymnasium>=0.29",
]

[project.scripts]
platform = "marl_platform.cli:app"
p = "marl_platform.cli:p_app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (skipped by default; run with -m slow or pytest tests/test_e2e_aggregation.py)",
]

[tool.ruff]
line-length = 88
target-version = "py310"

